<resources>
    <string name="app_name">Решатель задач на графах</string>

    <string name="title_text_view">Какую задачу нужно решить?</string>
    <string name="button_simplex_method">Симплекс-метод</string>
    <string name="button_transport_problem">Транспортная задача</string>
    <string name="button_graph_problem">Задачи на графах</string>

    <string name="button_prev">Назад</string>
    <string name="button_next">Дальше</string>

    <string name="title_activity_simplex_metod_config_quantity_var">Ввод количества переменных в
        симплекс-таблице
    </string>

    <string name="title_activity_simplex_method">Для решения задачи укажите ее размерность
        и способ представления чисел.</string>
    <string name="quantity_vars_text_view">Количество переменных</string>
    <string name="quantity_limit_conditions">Число ограничивающих условий</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_input_data_simplex_method">Ввод коэффициентов симплекс метода
    </string>
    <string name="text_view_input_coef_obj_func">Введите коэффициенты целевой функции :</string>
    <string name="text_view_title_limited">Введите коэффициенты системы ограничений :</string>

    <string-array name="type_objective_func">
        <item>max</item>
        <item>min</item>
    </string-array>

    <string-array name="type_of_equals">
        <item>&#8804;</item>
        <item>=</item>
        <item>&#8805;</item>
    </string-array>

    <string name="text_view_input_quantity_nodes">Введите количество вершин в графе</string>
    <string name="title_activity_activity_input_quantity_nodes">Задачи на графах</string>
    <string name="title_activity_activity_input_adjacent_nodes">Ввод  списка смежных вершин</string>

    <string name="text_view_input_adjacent_nodes">Введите через прообел смежные вершины</string>
    <string name="toast_fail_input_quantity_nodes">Ошибка!
        Не введено кол-во вершин в графе.</string>

    <string name="text_view_input_start_node">Введите вершину,
        с которой следует начать поиск</string>
    <string name="toast_fail_input_start_node">Ошибка! Вы не ввели вершину для поиска</string>
    <string name="toast_input_incorrect_start_node">Ошибка! Вершина,
        с которой следует начать поиска введена неправильно.</string>
    <string name="toast_input_incorrect_node">Ошибка!
        Неправильно введена одна из смежных вершин</string>

    <string name="title_activity_dfsand_bfs">Результаты поиска</string>

    <string name="toast_fail_load_graph">Произошла ошибка при загрузке графа!</string>
    <string name="text_view_result_depth_first_search">Результат поиска в глубину</string>
    <string name="text_view_result_breadth_first_search">Результат поиска в ширину</string>
    <string name="title_activity_input_weight_edges">Ввод весов ребер</string>

    <string name="text_view_type_graph">Выберете тип графа</string>

    <string name="title_input_weight_edges">Ввод взвешенного графа(если ребра нет следует оставить
        поле пустым).\nЕсли граф неориентированный, то можно для простоты вводить веса ребер
        только выше главной диагонали
    </string>

    <string name="title_select_graph_problem">Какую задачу требуется решить</string>
    <string name="title_activity_result">Результаты алгоритма Краскала</string>
    <string name="title_activity_select_graph_problem">Выбор задачи</string>
    <string name="button_DFS_BFS">Поиск в глубину и в ширину</string>
    <string name="button_Kruskal">Алгоритм Краскала</string>
    <string name="title_activity_test_graph_view">TestGraphViewActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
