<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_gravity="center_vertical">

    <TextView
        android:text="@string/title_select_graph_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_display_1_material"/>


        <Button
            android:id="@+id/button_DFS_BFS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/button_DFS_BFS"

            />

        <Button
            android:id="@+id/button_Kruskal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/button_Kruskal"

            />


</LinearLayout>
